Install packages required for requestVideo

--- a/src/functions/requestVideo/package.json
+++ b/src/functions/requestVideo/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.264.0",
+    "@aws-sdk/client-lambda": "^3.271.0",
     "nanoid": "^4.0.0"
   },
   "devDependencies": {
