--- a/src/functions/siphon/package.json
+++ b/src/functions/siphon/package.json
@@ -9,6 +9,7 @@
     "@aws-sdk/client-dynamodb": "^3.271.0",
     "@aws-sdk/client-s3": "^3.271.0",
     "@aws-sdk/lib-storage": "^3.271.0",
+    "@aws-sdk/s3-request-presigner": "^3.272.0",
     "ytdl-core": "^4.11.2"
   }
 }
