--- a/src/functions/video/package.json
+++ b/src/functions/video/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.264.0",
     "@aws-sdk/client-lambda": "^3.271.0",
+    "@aws-sdk/util-dynamodb": "^3.272.0",
     "nanoid": "^4.0.0"
   }
 }
