--- a/functions/video/package.json
+++ b/functions/video/package.json
@@ -1,6 +1,7 @@
 {
   "name": "video",
   "main": "index.mjs",
+  "version": "2.0.0",
   "private": true,
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.264.0",
